update meta tags

--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Cavoldle</title>
+  <!-- Basic meta tags -->
+  <meta name="description" content="Play the Cavoldle game. Test your guessing skills in this fun twist on the classic Wordle game.">
+
+  <!-- Open Graph meta tags -->
+  <meta property="og:title" content="Cavoldle">
+  <meta property="og:description" content="Play the Cavoldle game. Test your guessing skills in this fun twist on the classic Wordle game.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://groovytuesday.github.io/cavoldle/">
+  <meta property="og:image" content="https://groovytuesday.github.io/cavoldle/preview-image.png">
+</head>
   <style>
   /* Paste the entire updated CSS code here */
   body {
